# capacity-planning-tool

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
.codex/prompts/: claude-ui.md  clean-docs.md  review-pr.md  ship-change.md
.codex/skills/github-planning/: SKILL.md
.codex/skills/github-shipping/: SKILL.md
.codex/skills/repo-review/: SKILL.md
.codex/skills/ui-handoff/: SKILL.md
.github/workflows/: ci.yml  codex-review-gate.yml
config/: defaults.json
docs/: agentic_replanning_plan.md  assumptions.md  current_state.md  product.md  product_spec.md  shipping_workflow.md  ui_json_spec.md
examples/: feasible_plan.json  goal_driven_plan.json  infeasible_plan.json  v2_function_estimates_capacity_check.json  v2_rd_org_capacity_check.json  v2_rd_org_month_auto_capacity_check.json  v2_rd_org_planning_schedule.json  v2_rd_org_planning_schedule_dependency_only.json
scripts/: pr_ready_check.sh
specs/: ui_handoff_v1.json
src/capacity_planning_tool/: __init__.py  __main__.py  cli.py  config.py  models.py  planner.py  server.py
tests/: test_cli.py  test_planner.py  test_server.py  test_ui_spec.py  ui_logic.test.mjs
ui/: app.js  index.html
